# py_work_script_repo

./: .gitignore  AGENTS.md  README.md  pyproject.toml
1. fault_recording_parse_excel_template/: __init__.py  build_can_fault_excel_template.py  instructions_content.py  repair_vba_module.ps1  requirements.txt
1.fault_recording_parse_excel_template/: README.md  build_can_fault_excel_template.py  instructions_content.py  requirements.txt
2. McuCanMap_script/: gen_dsp_meas_resp_from_xlsx.py  gen_scu_pcs_run_config.py  protection.csv
2.McuCanMap_script/: README.md  c_struct_param.c  gen_dsp_meas_resp_from_xlsx.py  gen_scu_pcs_run_config.py  requirements.txt
3.wireshark_plugin/: BMS2.0 LAN Matrix V1.0.44.xlsx  BMS2.0 LAN Matrix V1.0.50.xlsx  BMS2.0-Wireshark插件使用说明.md  BMS2.0-Wireshark解析方案.md  README.md  WINDOWS安装说明.txt  bms20_fault.lua  bms20_fault_defs.lua  bms20_fault_enabled.lua  bms20_msg_map.lua  bms20_payload.lua  bms20_payload_BBMS_A_Selfdr.lua  bms20_payload_BBMS_CtlWord.lua  bms20_payload_BBMS_Fault.lua  bms20_payload_BBMS_SumInfo.lua  bms20_payload_ParaThr_CellV.lua  bms20_payload_RBMS_CellBalSt.lua  bms20_payload_RBMS_Debug.lua  bms20_payload_RBMS_SOXdebugData1.lua  bms20_payload_RBMS_SOXdebugData2.lua  bms20_payload_RBMS_SumInfo.lua  bms20_payload_RBMS_Volt.lua  bms20_payload_enabled.lua  bms20_payload_manifest.lua  bms20_v2.lua  gen_fault_defs.py  gen_msg_map.py  gen_payload_defs.py  regenerate_plugins.py
4.rbms_tcp_sim/: .gitignore  README.md  pyproject.toml
4.rbms_tcp_sim/config/: rbms_cellbalst.csv  rbms_cellsdr.csv  rbms_debug.csv  rbms_fault.csv  rbms_sim.toml  rbms_soxdebug1.csv  rbms_soxdebug2.csv  rbms_suminfo.csv  rbms_temp.csv  rbms_volt.csv
4.rbms_tcp_sim/docs/: AI开发工作流.md  DISCREPANCIES.md  PLAN.md  REVIEW_CHECKLIST.md  测试规格.md  需求文档.md
4.rbms_tcp_sim/docs/文档二次整理/: SystemConfiguration_BMS20A_BBMS-FaultList.md  SystemConfiguration_BMS20A_BBMS-SystemParameter.md  SystemConfiguration_BMS20_RBMS-FaultList.md  SystemConfiguration_BMS20_RBMS-SystemParameter.md  上位机使用手册-HMI行为要点.md  协议文档-数据包格式V2.md
4.rbms_tcp_sim/src/rbms_tcp_sim/: __init__.py  app_config.py  cli.py  codec.py  handlers.py  matrix_runtime.py  messages.py  protocol.py  rx_handlers.py  scheduler.py  session.py  state.py  tcp_client_to_hmi.py  tcp_server_for_bbms.py  tx_builder.py
4.rbms_tcp_sim/src/rbms_tcp_sim/matrix_config/: __init__.py  csv_common.py  generators.py  profiles.py  xlsx_matrix.py
4.rbms_tcp_sim/tests/: test_app_config.py  test_bbms_server.py  test_cli_mode.py  test_codec.py  test_debug_sox_messages.py  test_frame_id.py  test_handlers.py  test_hmi_client.py  test_matrix_messages.py  test_matrix_runtime.py  test_messages.py  test_protocol.py  test_protocol_errors.py  test_raw_to_physical.py  test_session.py  test_suminfo_config.py  test_suminfo_csv_handlers.py  test_xlsx_matrix.py
CAN_dbc/: CSV_使用说明.md  README.md  gen_dbc_example.py  generated_multi.dbc  my_measurements.dbc  requirements.txt
McuCanMap_script/: McuCanMap.xlsx  README.md  c_struct_meas.c  py_gen_pcs_id_point_name_ename_map.csv  requirements.txt  run.csv  system.csv
docs/: ai-coding-setup-practice.md  cursor-3.5-ai-coding-rules.md
fault_recording_parse_excel_template/: README.md  build_can_fault_excel_template.py  can_fault_import.bas  can_fault_recording_template.xlsm  (+3 more)
(+76 files in other folders)
