# 开发工具元配置：uv 虚拟环境与各子项目依赖组。
# ruff / ty / pytest：全局 uv tool（见 AGENTS.md）。
# openpyxl：无 CLI，用 uv pip install 装入 .venv（见 AGENTS.md）。
# 各顶层工具目录仍为独立项目，将来可整目录拆仓。

[project]
name = "py-work-script-repo-dev"
version = "0.0.0"
description = "Dev tooling and shared uv groups for py_work_script_repo monorepo"
requires-python = ">=3.13,<3.14"
dependencies = []

[dependency-groups]
can-dbc = [
    "cantools>=41.4.0",
]
# fault_recording_parse_excel_template：构建 xlsm 需 win32com
fault-recording = [
    "pywin32>=306",
]

[tool.uv]
default-groups = ["fault-recording", "can-dbc"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = [
    "1.fault_recording_parse_excel_template",
    "2.McuCanMap_script",
    "3.wireshark_plugin",
    "CAN_dbc",
    "4.rbms_tcp_sim",
    "tests",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests", "4.rbms_tcp_sim/tests"]
pythonpath = [".", "4.rbms_tcp_sim/src"]
addopts = "-q"

# ty：IDE 扩展（astral-sh.ty）+ CLI（ty check）+ CI 共用
[tool.ty.environment]
python-version = "3.13"
python = ".venv"
root = ["."]
extra-paths = ["4.rbms_tcp_sim/src"]

[tool.ty.src]
include = [
    "1.fault_recording_parse_excel_template",
    "2.McuCanMap_script",
    "3.wireshark_plugin",
    "CAN_dbc",
    "4.rbms_tcp_sim",
    "tests",
]
